--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shapeways-alva",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Custom Node Module to interact with shapeways API.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/yazeenj/shapeways-alva.git"
   },
   "author": "Yazeen (http://yznit.com/)",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/yazeenj/shapeways-alva/issues"
   },
